--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "edinburgh.games.johnmichaelhenderson.testdots"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 6
-        versionName "1.6"
+        versionCode 13
+        versionName "1.11"
     }
     buildTypes {
         release {
@@ -21,8 +21,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':libraries:BaseGameUtils')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.google.android.gms:play-services:8.4.0'
+
 }
